# aurora

./: .env.example  .gitignore  CLAUDE.md  INIT.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
aurora/: __init__.py  agent.py  config.py
aurora/activity/: __init__.py  log.py
aurora/brief/: __init__.py  compose.py
aurora/ledger/: __init__.py  propose.py  store.py
aurora/llm/: __init__.py  client.py
aurora/memory/: __init__.py  store.py
aurora/notify/: __init__.py  classifier.py  job.py  state.py
aurora/playbook/: __init__.py  store.py
aurora/profile/: __init__.py  interview.py  store.py
aurora/remind/: __init__.py  nudge.py  state.py
aurora/schedule/: __init__.py  runner.py  state.py  timing.py
aurora/sources/: __init__.py  base.py  gmail.py  gmail_auth.py  imap.py  registry.py
aurora/surfaces/: __init__.py  telegram.py
aurora/tools/: __init__.py  email_tools.py  ledger_tools.py  notify_tools.py  playbook_tools.py
docs/: BACKLOG.md  DECISIONS.md  STATE.md  WORKLOG.md
tests/: test_agent.py  test_brief_compose.py  test_classifier.py  test_config.py  test_email_tools.py  test_gmail.py  test_imap.py  test_ledger_propose.py  test_ledger_store.py  test_ledger_tools.py  test_llm_client.py  test_mail_registry.py  test_memory_store.py  test_notify_job.py  test_notify_state.py  test_notify_tools.py  test_onboard_callbacks.py  test_playbook_store.py  test_profile_interview.py  test_profile_store.py  test_remember_marker.py  test_remind.py  test_schedule_timing.py  test_time_note.py  test_version.py
