[project]
name = "aurora"
version = "0.6.0"
description = "A process-first personal assistant that learns your preferences over time."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "tzdata>=2024.1",  # zoneinfo time-zone database (Windows has no system tzdata)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
aurora-bot = "aurora.surfaces.telegram:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aurora*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
